--- a/src/pages/my-stocks/my-stocks.html
+++ b/src/pages/my-stocks/my-stocks.html
@@ -9,5 +9,35 @@
 
 
 <ion-content padding>
+  <ion-refresher
+    pulling-text="Pull to refresh..."
+    on-refresh="getMyStocksData()"
+    class="margin-auto"></ion-refresher>
 
+  <ion-list>
+
+      <ion-item ng-repeat="stock in myStocksData | orderBy: '-chg_percent' track by stock.symbol"> <!--ng-href="#/app/{{stock.symbol}}"-->
+
+        <div class="row row-center">
+          <div class="col stock-ticker-name">
+            <h3>{{stock?.symbol}}</h3>
+            <h6 ng-bind-html="::stock.name"></h6>
+          </div>
+
+          <div class="col col-25 stock-price-time">
+            <h3>{{stock?.price | shrinkNumber:2}}</h3>
+            <h6>{{stock?.utctime | date:'h:mm a'}}</h6>
+          </div>
+          
+          <div class="col col-33 stock-change" ng-class="stock.change >= 0 ? 'background-green' : 'background-red'">
+            <h3><span ng-if="stock.change >= 0">+</span>{{stock?.chg_percent | number:3}}%</h3>
+            <h6><span ng-if="stock.change >= 0">+</span>{{stock?.change | shrinkNumber:2}}</h6>
+          </div>
+        </div>
+
+        <button ion-button class="button-light icon ion-minus-circled color-red inset-shadow" ng-click="unfollowStock(stock.symbol)"></button>
+
+      </ion-item>
+
+    </ion-list>
 </ion-content>
