--- a/src/pages/stock/stock.html
+++ b/src/pages/stock/stock.html
@@ -17,5 +17,94 @@
 
 
 <ion-content padding>
+  <div class="button-bar" id="short-button-bar">
+    <a (click)="chartViewFunc(1)" ng-class="chartView == 1 ? 'active' : ''" class="button">Day</a>
+    <a (click)="chartViewFunc(2)" ng-class="chartView == 2 ? 'active' : ''" class="button">Week</a>
+    <a (click)="chartViewFunc(3)" ng-class="chartView == 3 ? 'active' : ''" class="button">3m</a>
+    <a (click)="chartViewFunc(4)" ng-class="chartView == 4 ? 'active' : ''" class="button">Year</a>
+    <a (click)="chartViewFunc(5)" ng-class="chartView == 5 ? 'active' : ''" class="button">Max</a>
+  </div>
 
+  <!-- Yahoo Charts — go here for options https://code.google.com/p/support/wiki/ReadOnlyTransition -->
+  <!--<img *ngIf="chartView == 1" [src]="http://chart.finance.yahoo.com/z?s={{ticker}}&t=1d&q=l&l=on&z=m&a=vm" style="width: 100%;">
+  <img *ngIf="chartView == 2" [src]="http://chart.finance.yahoo.com/z?s={{ticker}}&t=5d&q=l&l=on&z=m&a=vm" style="width: 100%;">
+  <img *ngIf="chartView == 3" [src]="http://chart.finance.yahoo.com/z?s={{ticker}}&t=3m&q=l&l=on&z=m&a=vm" style="width: 100%;">
+  <div *ngIf="chartView == 4" nv-chart="chartOptions" id="interactiveChart"></div>
+  <img *ngIf="chartView == 5" [src]="http://chart.finance.yahoo.com/z?s={{ticker}}&t=my&q=l&l=on&z=m&a=vm" style="width: 100%;">-->
+
+
+  <div class="card" id="market-data-card">
+
+    <div class="item item-divider">Market Data <span class="last-trade">Last trade: {{stockPriceData?.utctime | date:'h:mm a'}}</span></div>
+
+    <div class="row row-center">
+      <div class="col">Ask: </div>
+      <div class="col col-20">{{stockDetailsData?.Ask | shrinkNumber: 2}}</div>
+      <div class="col">Bid: </div>
+      <div class="col col-20">{{stockDetailsData?.Bid | shrinkNumber: 2}}</div>
+    </div>
+
+    <div class="row row-center">
+      <div class="col">Prev. Close: </div>
+      <div class="col col-20">{{stockDetailsData?.PreviousClose | shrinkNumber: 2}}</div>
+      <div class="col">Open: </div>
+      <div class="col col-20">{{stockDetailsData?.Open | shrinkNumber: 2}}</div>
+    </div>
+
+    <div class="row row-center">
+      <div class="col">Day's High: </div>
+      <div class="col col-20">{{stockPriceData?.day_high | shrinkNumber: 2}}</div>
+      <div class="col">Day's Low: </div>
+      <div class="col col-20">{{stockPriceData?.day_low | shrinkNumber: 2}}</div>
+    </div>
+
+    <div class="row row-center">
+      <div class="col">52w High: </div>
+      <div class="col col-20">{{stockDetailsData?.YearHigh | shrinkNumber: 2}}</div>
+      <div class="col">52w Low: </div>
+      <div class="col col-20">{{stockDetailsData?.YearLow | shrinkNumber: 2}}</div>
+    </div>
+
+    <div class="row row-center">
+      <div class="col">Volume: </div>
+      <div class="col col-20">{{stockPriceData?.volume | shrinkNumber: 2}}</div>
+      <div class="col">Avg. Volume: </div>
+      <div class="col col-20">{{stockDetailsData?.AverageDailyVolume | shrinkNumber: 2}}</div>
+    </div>
+
+    <div class="row row-center">
+      <div class="col">Market Cap: </div>
+      <div class="col col-20">{{stockDetailsData?.MarketCapitalization}}</div>
+      <div class="col">EBITDA: </div>
+      <div class="col col-20">{{stockDetailsData?.EBITDA}}</div>
+    </div>
+
+    <div class="row row-center">
+      <div class="col">P/E: </div>
+      <div class="col col-20">{{stockDetailsData?.PERatio | shrinkNumber: 2}}</div>
+      <div class="col">EPS: </div>
+      <div class="col col-20">{{stockDetailsData?.EarningsShare | shrinkNumber: 2}}</div>
+    </div>
+
+  </div>
+
+
+  <div class="card" id="stock-notes">
+    <div class="item item-divider">Notes <span ng-click="addNote()" class="add-stock-note">Add <i class="icon ion-ios-plus"></i></span></div>
+    <a class="item" ng-repeat="note in stockNotes track by $index" ng-click="openNote($index, note.title, note.body)">
+      <h2>{{note?.title}}</h2>
+      <h6>{{note?.date | date:'M/d/yy'}}</h6>
+    </a>
+  </div>
+
+
+  <div class="card" id="stock-news">
+    <div class="item item-divider">News</div>
+    <a class="item item-icon-right" ng-repeat="story in newsStories" ng-click="openWindow(story.link)">
+      <h2>{{story?.title}}</h2>
+      <h6>{{story?.pubDate | characters:17:false:false}}</h6>
+      <p ng-if="story.description.length > 0">{{story?.description | characters:200:false:true}}</p>
+      <i class="icon ion-ios-arrow-right"></i>
+    </a>
+  </div>
 </ion-content>
